--- a/src/app/DiceRoll.css
+++ b/src/app/DiceRoll.css
@@ -93,8 +93,8 @@
     height: 200px;
     position: relative;
     margin: 20px;
-    border-radius: 20px; /* Add this line */
-    overflow: hidden; /* Add this line to ensure the cube faces don't overflow */    
+    /* border-radius: 20px;  Add this line */
+    /* overflow: hidden;  Add this line to ensure the cube faces don't overflow */    
   }
   
   .cube {
@@ -121,7 +121,7 @@
     font-size: 500%;
     text-align: center;
     padding: 50px 0;
-    border-radius: 20px; /* Add this line */
+    /* border-radius: 20px; */
   }
   
   
